@@ -149,6 +149,8 @@ Standard library:
 - GPR#265: new implementation of Queue avoiding Obj.magic
   (Jérémie Dimino)
 - GPR#272: Switch classify_float to [@@unboxed] (Alain Frisch)
+- Improve speed of classify_float by not going through fpclassify()
+  (Alain Frisch, Xavier Leroy)
 - GPR#277: Switch the following externals to [@@unboxed]:
   * {Nativeint,Int32,Int64}.{of,to}_float
   * Int{32,64}.float_of_bits
